--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         }
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #C2E6E3 0%, #b2d6d3 100%);
+            background-color: #C2E6E3;  /* Fallback color */
+            background-image: none;  /* Remove the previous pattern temporarily */
+            min-height: 100vh;
             position: relative;
         }
         .video-fade {
@@ -134,30 +136,30 @@
 
     <main class="container mx-auto px-4">
         <!-- Benefits Section -->
-        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4 hover:shadow-[0_20px_60px_rgba(27,108,109,0.15)] transition-shadow duration-300">
-            <h2 class="text-3xl font-bold mb-10 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto font-['Allura'] text-5xl">
+        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4">
+            <h2 class="text-3xl font-bold mb-10 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto">
                 Why Choose Our Sports Massage?
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
                     <div class="flex items-center mb-4">
                         <h3 class="text-xl font-semibold ml-4">Performance Enhancement</h3>
                     </div>
                     <p class="text-gray-600">Improve flexibility, reduce muscle tension, and optimize your athletic performance.</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
                     <div class="flex items-center mb-4">
                         <h3 class="text-xl font-semibold ml-4">Injury Prevention</h3>
                     </div>
                     <p class="text-gray-600">Regular treatments help prevent sports injuries and maintain muscle health.</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
                     <div class="flex items-center mb-4">
                         <h3 class="text-xl font-semibold ml-4">Recovery Support</h3>
                     </div>
                     <p class="text-gray-600">Accelerate recovery between training sessions and after competitions.</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
                     <div class="flex items-center mb-4">
                         <h3 class="text-xl font-semibold ml-4">Expert Techniques</h3>
                     </div>
@@ -167,8 +169,8 @@
         </section>
 
         <!-- Services Section -->
-        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4 hover:shadow-[0_20px_60px_rgba(27,108,109,0.15)] transition-shadow duration-300">
-            <h2 class="text-3xl font-bold mb-10 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto font-['Allura'] text-5xl">
+        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4">
+            <h2 class="text-3xl font-bold mb-10 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto">
                 Our Treatment Services
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -238,8 +240,8 @@
         </section>
 
         <!-- Is this you? Section -->
-        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4 hover:shadow-[0_20px_60px_rgba(27,108,109,0.15)] transition-shadow duration-300">
-            <h2 class="text-3xl font-bold mb-6 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto font-['Allura'] text-5xl">
+        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4">
+            <h2 class="text-3xl font-bold mb-6 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto">
                 Is This For You?
             </h2>
             <div class="space-y-6">
@@ -270,7 +272,7 @@
         </section>
 
         <!-- FAQ Section -->
-        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4 hover:shadow-[0_20px_60px_rgba(27,108,109,0.15)] transition-shadow duration-300">
+        <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4">
             <h2 class="text-3xl font-bold mb-6 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto">
                 Frequently Asked Questions
             </h2>
