--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             font-size: 2.5rem; /* Slightly larger to suit the font style */
             letter-spacing: 1px;
         }
+        html {
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 <body class="min-h-screen">
@@ -210,8 +213,8 @@
 
         <!-- Services Section -->
         <section class="max-w-6xl mx-auto mb-20 bg-white p-8 rounded-2xl shadow-[0_20px_50px_rgba(27,108,109,0.1)] border-[#1B6C6D] border-t-4">
-            <h2 class="text-3xl font-bold mb-10 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto">
-                Our Treatment Services
+            <h2 id="treatment-services" class="text-3xl font-bold mb-10 text-center text-black border-b-2 border-[#1B6C6D] pb-4 w-fit mx-auto">
+                My Treatment Services
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- Restore Sports Massage -->
@@ -386,8 +389,8 @@
                 <div class="w-full max-w-xs">
                     <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="hover:text-[#C2E6E3] transition-colors">Book Appointment</a></li>
-                        <li><a href="https://bookings.gettimely.com/restorewithangel/book?uri=https%3A%2F%2Fbook.gettimely.com%2FBooking%2FLocation%2F142820%3Fmobile%3DTrue%26params%3D%25253fclient-login%25253dtrue%252526fbclid%25253dPAZXh0bgNhZW0CMTEAAadkspiQ7Wo4pSuea6oK0C5xsu9-Znnt7wsvHRZv9zsOxtX338xvMaR_lPPlYg_aem_zENlQ29r2MyPfRPcRN7xgQ" class="hover:text-[#C2E6E3] transition-colors">Services</a></li>
+                        <li><a href="#treatment-services" class="hover:text-[#C2E6E3] transition-colors">Services</a></li>
+                        <li><a href="https://bookings.gettimely.com/restorewithangel/book?uri=https%3A%2F%2Fbook.gettimely.com%2FBooking%2FLocation%2F142820%3Fmobile%3DTrue%26params%3D%25253fclient-login%25253dtrue%252526fbclid%25253dPAZXh0bgNhZW0CMTEAAadkspiQ7Wo4pSuea6oK0C5xsu9-Znnt7wsvHRZv9zsOxtX338xvMaR_lPPlYg_aem_zENlQ29r2MyPfRPcRN7xgQ" class="hover:text-[#C2E6E3] transition-colors">Book Appointment</a></li>
                         <li><a href="#" class="hover:text-[#C2E6E3] transition-colors">FAQs</a></li>
                     </ul>
                 </div>
