--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                             <p class="text-sm text-gray-500">1 hour</p>
                         </div>
                     </div>
+                    <img src="aneck.jpeg" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4">
                     <p class="text-gray-600">Full body treatment head to toe with aromatherapy oils. With medium to light pressure to help you switch off and relax. It improves your circulation and blood flow, so your organs and skin get more oxygen; aiding with lymphatic drainage.</p>
                 </div>
             </div>
