--- a/index.html
+++ b/index.html
@@ -226,7 +226,12 @@
                             <p class="text-sm text-gray-500">1 hour</p>
                         </div>
                     </div>
-                    <video src="avid.mp4" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4" autoplay muted loop playsinline></video>
+                    <div class="relative mb-4">
+                        <div class="absolute top-2 left-2 bg-[#1B6C6D] text-white text-xs font-bold px-3 py-1 rounded-full shadow-lg z-10">
+                            20% off first booking
+                        </div>
+                        <video src="avid.mp4" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4" autoplay muted loop playsinline></video>
+                    </div>
                     <p class="text-gray-600">Sports massage is a specialised form of massage therapy designed to enhance athletic performance and support individuals with active lifestyles. Whether you're a professional athlete, a dedicated gym-goer, or someone with a physically demanding job, this treatment can help you achieve your goals and maintain optimal physical condition.</p>
                     <p class="text-gray-600 mt-2">Involves stretching, muscle energy technique, myofascial release and trigger points.</p>
                 </div>
@@ -240,7 +245,12 @@
                             <p class="text-sm text-gray-500">1 hour</p>
                         </div>
                     </div>
-                    <img src="cup.jpeg" alt="Dry Cupping Treatment" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <div class="relative mb-4">
+                        <div class="absolute top-2 left-2 bg-[#1B6C6D] text-white text-xs font-bold px-3 py-1 rounded-full shadow-lg z-10">
+                            20% off first booking
+                        </div>
+                        <img src="cup.jpeg" alt="Dry Cupping Treatment" class="w-full h-48 object-cover rounded-lg">
+                    </div>
                     <p class="text-gray-600">A suction force inside the cup pulls your skin upward. This suction force expands and breaks open tiny blood vessels (capillaries) under your skin. Your body replenishes the cupped areas with healthier blood flow and stimulates proper and normal healing at a cellular level.</p>
                     <p class="text-gray-600 mt-2">You'll have red, round cupping therapy marks that should fade in a week or two. Usually I will be able to apply the cups in one area per session.</p>
                 </div>
@@ -254,7 +264,12 @@
                             <p class="text-sm text-gray-500">1 hour</p>
                         </div>
                     </div>
-                    <img src="massage1.jpeg" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <div class="relative mb-4">
+                        <div class="absolute top-2 left-2 bg-[#1B6C6D] text-white text-xs font-bold px-3 py-1 rounded-full shadow-lg z-10">
+                            20% off first booking
+                        </div>
+                        <img src="massage1.jpeg" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4">
+                    </div>
                     <p class="text-gray-600">Manual therapy that focuses on treating a wide range of musculoskeletal issues. This includes muscular imbalances, postural problems, chronic pain, and injuries.</p>
                     <p class="text-gray-600 mt-2">The primary goal of this therapy is to alleviate pain, restore function, and promote overall well-being by addressing the underlying causes of discomfort in the soft tissues, such as muscles, tendons, ligaments, and fascia.</p>
                 </div>
@@ -268,7 +283,12 @@
                             <p class="text-sm text-gray-500">1 hour</p>
                         </div>
                     </div>
-                    <img src="aneck.jpeg" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <div class="relative mb-4">
+                        <div class="absolute top-2 left-2 bg-[#1B6C6D] text-white text-xs font-bold px-3 py-1 rounded-full shadow-lg z-10">
+                            20% off first booking
+                        </div>
+                        <img src="aneck.jpeg" alt="Tension Release Massage Treatment" class="w-full h-48 object-cover rounded-lg mb-4">
+                    </div>
                     <p class="text-gray-600">Full body treatment head to toe with aromatherapy oils. With medium to light pressure to help you switch off and relax. It improves your circulation and blood flow, so your organs and skin get more oxygen; aiding with lymphatic drainage.</p>
                 </div>
             </div>
