--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container mx-auto px-4 py-3 flex flex-col md:flex-row justify-between items-center">
             <a href="#" class="elegant-text text-white mb-2 md:mb-0">
                 <span class="block md:hidden transition-all duration-500 ease-in-out" id="mobileLogo">Restore with Angel</span>
-                <span class="hidden md:block">Restore with Angel</span>
+              <!--   <span class="hidden md:block">Restore with Angel</span> -->
             </a>
             <!--  <p class="text-center font-bold text-white mb-2 md:mb-0">Enhance Performance. Reduce Pain. Speed Recovery.</p> -->
             <a href="https://bookings.gettimely.com/restorewithangel/book?uri=https%3A%2F%2Fbook.gettimely.com%2FBooking%2FLocation%2F142820%3Fmobile%3DTrue%26params%3D%25253fclient-login%25253dtrue%252526fbclid%25253dPAZXh0bgNhZW0CMTEAAadkspiQ7Wo4pSuea6oK0C5xsu9-Znnt7wsvHRZv9zsOxtX338xvMaR_lPPlYg_aem_zENlQ29r2MyPfRPcRN7xgQ" 
