--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     .nav-glass {
       background: rgba(2, 6, 23, 0.85);
       backdrop-filter: blur(22px);
-      border: 1px solid rgba(255, 255, 255, 0.08);
     }
     .section-shell {
       border-radius: 32px;
@@ -61,20 +60,6 @@
     .gradient-border>* {
       position: relative;
       z-index: 1;
-    }
-    .floating-card {
-      animation: float 8s ease-in-out infinite;
-    }
-    @keyframes float {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-14px);
-      }
-      100% {
-        transform: translateY(0);
-      }
     }
     .faq-answer {
       max-height: 0;
@@ -131,7 +116,7 @@
     <div class="pointer-events-none absolute -right-20 top-10 h-72 w-72 rounded-full bg-brand/30 blur-3xl"></div>
 
     <header class="fixed left-0 top-0 z-50 w-full">
-      <nav class="nav-glass flex w-full items-center justify-between gap-4 rounded-none border-b border-white/10 px-6 py-4 text-sm shadow-xl">
+      <nav class="nav-glass flex w-full items-center justify-between gap-4 rounded-none px-6 py-4 text-sm shadow-xl">
         <a href="https://resolve-sports-therapy.uk2.cliniko.com/bookings" target="_blank" rel="noopener" class="rounded-full bg-brand px-5 py-2 text-sm font-semibold text-slate-900 transition hover:bg-brand-light hover:text-night">Book now</a>
         <div class="flex items-center gap-3">
           <button id="menu-toggle" class="rounded-full border border-white/20 px-4 py-2 text-sm font-semibold text-white transition hover:border-brand">Menu</button>
@@ -187,7 +172,7 @@
           </ul>
         </div>
         <div class="gradient-border p-1">
-          <div class="floating-card flex h-full flex-col justify-between rounded-[22px] bg-slate-900/80 p-8">
+          <div class="flex h-full flex-col justify-between rounded-[22px] bg-slate-900/80 p-8">
             <div>
               <p class="text-sm uppercase tracking-widest text-brand-light">Inside the clinic</p>
               <h2 class="mt-4 text-3xl font-semibold text-white">Your rehab partner</h2>
@@ -379,13 +364,10 @@
             </div>
           </div>
         </div>
-        <div class="relative overflow-hidden rounded-3xl border border-white/10">
-          <img src="leg6.jpeg" alt="Client completing rehabilitation exercises" class="h-full w-full object-cover" />
+        <div class="relative mx-auto max-w-md overflow-hidden rounded-3xl border border-white/10">
+          <img src="leg6.jpeg" alt="Client completing rehabilitation exercises" class="h-80 w-full object-cover" />
           <div class="absolute inset-0 bg-gradient-to-t from-night/90 via-night/20 to-transparent"></div>
-          <div class="absolute bottom-6 left-6 right-6 rounded-2xl bg-white/10 p-5">
-            <p class="text-xs uppercase tracking-[0.4em] text-brand-light">Track your wins</p>
-            <p class="mt-2 text-lg font-semibold text-white">Session summaries, home plans and video demos are delivered straight after each visit to keep you in control.</p>
-          </div>
+          
         </div>
       </div>
     </section>
@@ -441,7 +423,7 @@
             <a href="https://www.google.com/search?sca_esv=7cb5a2c0938f91b5&amp;rlz=1C5CHFA_enGB775GB775&amp;sxsrf=AE3TifOoR0Mn9wRqz4AHD400BV8Axww9Bw:1764180228098&amp;si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E51QPnVN7osPe5yOF0ZZWw5Ifdh-RjZVy-obqQL8Aaw9_lBdaaL5Y4Iz2_3Yue052JmT_dEUOdcOy76JlaIZbjBdz8CqtCzC3syAw8pb84hY8WS5OA==&amp;q=Resolve+Sports+Therapy+Reviews&amp;sa=X&amp;ved=2ahUKEwjv7cK-s5CRAxUJdUEAHUq1BvMQ0bkNegQIJhAE&amp;biw=803&amp;bih=754&amp;dpr=2" target="_blank" rel="noopener" class="rounded-full border border-brand/40 px-4 py-2 text-sm font-semibold text-brand-light transition hover:bg-brand hover:text-night">Read all Google reviews</a>
           </div>
         </div>
-        <div class="relative mt-8 min-h-[320px]">
+        <div class="relative mt-8 min-h-[360px] overflow-hidden rounded-3xl border border-white/10">
           <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“I went to see Ice after suffering from mid to low back pain for some time. After explaining the symptoms, Ice identified the cause and treated it. My movement improved massively—highly recommend Resolve Sports Therapy.”</p>
@@ -552,7 +534,7 @@
         <p class="mt-3 text-slate-300">Clinic based in Winnersh, Wokingham with flexible appointments and home visit options on request.</p>
         <div class="mt-6 space-y-3 text-base text-slate-200">
           <p><span class="font-semibold text-white">Whatsapp:</span> <a href="https://wa.me/447468516971" class="text-brand-light underline" target="_blank" rel="noopener">07468516971</a></p>
-          <p><span class="font-semibold text-white">Email:</span> <a href="mailto:resolvesporttherapy@outlook.com" class="text-brand-light underline">resolvesporttherapy@outlook.com</a></p>
+          <p class="break-words"><span class="font-semibold text-white">Email:</span> <a href="mailto:resolvesporttherapy@outlook.com" class="text-brand-light underline">resolvesporttherapy@outlook.com</a></p>
         </div>
         <div class="mt-8 flex flex-wrap justify-center gap-4">
           <a href="https://resolve-sports-therapy.uk2.cliniko.com/bookings" target="_blank" rel="noopener" class="rounded-full bg-brand px-6 py-3 text-sm font-semibold text-slate-900 transition hover:bg-brand-light hover:text-night">Book on Cliniko</a>
