--- a/index.html
+++ b/index.html
@@ -423,33 +423,33 @@
             <a href="https://www.google.com/search?sca_esv=7cb5a2c0938f91b5&amp;rlz=1C5CHFA_enGB775GB775&amp;sxsrf=AE3TifOoR0Mn9wRqz4AHD400BV8Axww9Bw:1764180228098&amp;si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E51QPnVN7osPe5yOF0ZZWw5Ifdh-RjZVy-obqQL8Aaw9_lBdaaL5Y4Iz2_3Yue052JmT_dEUOdcOy76JlaIZbjBdz8CqtCzC3syAw8pb84hY8WS5OA==&amp;q=Resolve+Sports+Therapy+Reviews&amp;sa=X&amp;ved=2ahUKEwjv7cK-s5CRAxUJdUEAHUq1BvMQ0bkNegQIJhAE&amp;biw=803&amp;bih=754&amp;dpr=2" target="_blank" rel="noopener" class="rounded-full border border-brand/40 px-4 py-2 text-sm font-semibold text-brand-light transition hover:bg-brand hover:text-night">Read all Google reviews</a>
           </div>
         </div>
-        <div class="relative mt-8 min-h-[360px] overflow-hidden rounded-3xl border border-white/10">
-          <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
+        <div class="relative mt-8 min-h-[420px] overflow-hidden rounded-3xl border border-white/10 p-2">
+          <article class="testimonial-card absolute inset-2 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“I went to see Ice after suffering from mid to low back pain for some time. After explaining the symptoms, Ice identified the cause and treated it. My movement improved massively—highly recommend Resolve Sports Therapy.”</p>
             <p class="mt-6 text-sm uppercase tracking-widest text-slate-300">Myles Vaughan</p>
           </article>
-          <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
+          <article class="testimonial-card absolute inset-2 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“I went to Resolve for neck and back pain from long days at the desk. After two sessions my pain reduced significantly and I can now work pain free. Would highly recommend!”</p>
             <p class="mt-6 text-sm uppercase tracking-widest text-slate-300">Milli Westlake</p>
           </article>
-          <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
+          <article class="testimonial-card absolute inset-2 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“I’ve had knee trouble for over 15 years and after 30 minutes with Ice it felt the best it has since the original injury. He set out a clear plan for the next few weeks—highly recommend a visit.”</p>
             <p class="mt-6 text-sm uppercase tracking-widest text-slate-300">Rob Arnott</p>
           </article>
-          <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
+          <article class="testimonial-card absolute inset-2 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“Visited after feeling sore in my legs following football. Ice eased the tight spots in my calves and hamstrings and they feel so much better now. Will definitely visit again.”</p>
             <p class="mt-6 text-sm uppercase tracking-widest text-slate-300">Tayseer Alam</p>
           </article>
-          <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
+          <article class="testimonial-card absolute inset-2 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“Very friendly and got straight into resolving my calf issues. Could feel the difference instantly. Highly recommended.”</p>
             <p class="mt-6 text-sm uppercase tracking-widest text-slate-300">David Watkins</p>
           </article>
-          <article class="testimonial-card absolute inset-0 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
+          <article class="testimonial-card absolute inset-2 rounded-3xl border border-white/10 bg-white/5 p-6" data-testimonial>
             <p class="text-sm uppercase tracking-[0.4em] text-brand-light">Google review · &#9733;&#9733;&#9733;&#9733;&#9733;</p>
             <p class="mt-4 text-lg font-semibold text-white">“Great diagnosis of what I thought was a muscle tear. Ice explained exactly what was going on and how to tackle it—highly recommend.”</p>
             <p class="mt-6 text-sm uppercase tracking-widest text-slate-300">Andrew Williams</p>
